# framework

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  Build.cmd  Build.sh  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contributors.txt  Copyright.txt  LICENSE  License.txt  Makefile.am  README  README.md  README.txt  Release notes.txt  Tests.cmd  Tests.sh  Version.txt  accord-framework (VS Code).sln  accord.pc.in  autogen.sh  build-all-462.cmd  build-all.cmd  clean-all.cmd  configure.ac  issue_template.md  run-tests.cmd
Base/: Copyright.txt  License.txt  Release notes.txt  lgpl-3.0.txt
Base/Sources/: Building.txt
Base/Unit Tests/: All Tests.nunit  Read Me.txt
Performance/Accord.Perf.MachineLearning/: Accord.Perf.MachineLearning.csproj  Program.cs
Samples/: .gitignore  Building.txt  License.txt  Samples.sln  Samples.sln.GhostDoc.xml  force-clean.cmd
Samples/Unity/: .gitignore
Setup/: .gitignore  Accord.Setup (NETStandard).csproj  Accord.Setup.csproj  Accord.Setup.sln  Build all.cmd  Compile.cmd  Compile.sh  CreateRelease.cmd  Package.cmd  Publish.cmd  create-release.cmd  publish-nuget.cmd  update-version.cmd  version.cmd
Setup/Archiver/: Build (v3.5).cmd  Build (v4.0).cmd  Build.cmd  PackageSamples.cs  PackageSamples.ps1  Samples.cmd  package-framework.cmd  package-samples.cmd
Setup/Docs Projects/: AForge.NET.shfb
Setup/Installer/: Accord.iss  Build.cmd  license.txt
Setup/NuGet/: AForge.Genetic.nuspec  AForge.nuspec  Accord.Audio.DirectSound.nuspec  Accord.Audio.nuspec  Accord.Audition.nuspec  Accord.Controls.Audio.nuspec  Accord.Controls.Imaging.nuspec  Accord.Controls.Vision.nuspec  Accord.Controls.nuspec  Accord.Datasets.nuspec  Accord.DirectSound.nuspec  Accord.Fuzzy.nuspec  Accord.Genetic.nuspec  Accord.IO.nuspec  Accord.Imaging.Noncommercial.nuspec  Accord.Imaging.WPF.nuspec  Accord.Imaging.nuspec  Accord.MachineLearning.GPL.nuspec  Accord.MachineLearning.nuspec  Accord.Math.Noncommercial.nuspec  Accord.Math.nuspec  Accord.Neuro.nuspec  Accord.Statistics.nuspec  Accord.Text.nuspec  Accord.Video.DirectShow.nuspec  Accord.Video.FFMPEG.nuspec  Accord.Video.FFMPEG.x64.nuspec  Accord.Video.Kinect.nuspec  Accord.Video.VFW.nuspec  Accord.Video.Ximea.nuspec  Accord.Video.nuspec  Accord.Vision.nuspec  Accord.nuspec  Build.cmd  Push.cmd  Update.cmd  create-packages.cmd  push-packages.cmd  update-nuget.cmd
Setup/Properties/: AssemblyInfo.cs
Setup/Scripts/: Accord.Video.FFMPEG.targets  Accord.targets  UpdateVersion.cmd  UpdateVersion.cs  UpdateVersion.ps1
Sources/: .gitignore  AForge.NET.sln  Accord.NET (LGPL-only).sln  Accord.NET (Mono).sln  Accord.NET (NETStandard).sln  Accord.NET (NETStandard).targets  Accord.NET.LGPL.sln  Accord.NET.Mono.sln  Accord.NET.ib_preset  Accord.NET.psess  Accord.NET.ruleset  Accord.NET.sln  Accord.NET.sln.GhostDoc.user.dic  Accord.NET.sln.GhostDoc.xml  Accord.NET.targets  Accord.NET.testrunconfig  Accord.NET.vsmdi  Build All.sln  Building.txt  UpgradeLog.htm  UpgradeLog2.htm  Version.targets  force-clean.cmd
Sources/Accord.Audio/: Accord.Audio (NETStandard).csproj  Accord.Audio.cd  Accord.Audio.csproj  AudioSourceMixer.cs  Extensions.cs  GlobalSuppressions.cs  IAudioOutput.cs  IAudioSource.cs  MFCC.cs  MelFrequencyCepstrumCoefficientDescriptor.cs  Metronome.cs  SampleConverter.cs  Tools.cs  UnsafeTools.cs
Sources/Accord.Audio.DirectSound/: Accord.Audio.DirectSound (NETStandard).csproj  Accord.Audio.DirectSound.csproj  AudioCaptureDevice.cs  AudioDeviceCollection.cs  AudioDeviceInfo.cs  AudioOutputDevice.cs  Extensions.cs  WaveDecoder.cs  WaveEncoder.cs  WaveFileAudioSource.cs
Sources/Accord.Audio.Formats/: Accord.Audio.Formats.cd  Accord.Audio.Formats.csproj  Extensions.cs  FrameInfo.cs  IAudioDecoder.cs  IAudioEncoder.cs  SoundStreamCoverup.cs  WaveDecoder.cs  WaveEncoder.cs
Sources/Accord.Audition/: Accord.Audition (NETStandard).csproj  Accord.Audition.cd  Accord.Audition.csproj  BagOfAudioWords.cs  BagOfAudioWords`1.cs  BagOfAudioWords`2.cs  BagOfAudioWords`4.cs  BaseBagOfAudioWords`5.cs
Sources/Accord.Controls/: Accord.Controls (NETStandard).csproj
Sources/Accord.Controls.Audio/: Accord.Controls.Audio (NETStandard).csproj  Accord.Controls.Audio.csproj  Wavechart.cs  WavechartBox.Designer.cs  WavechartBox.cs
Sources/Accord.Controls.Cyotek.ImageBox/: .editorconfig  Accord.Controls.Cyotek.ImageBox.sln  CHANGELOG.md  LICENSE.txt  README.md  acknowledgements.md  build.cmd  icon-16.pdn  icon-32.pdn  nuget.config
Sources/Accord.Controls.Imaging/: Accord.Controls.Imaging (NETStandard).csproj  Accord.Controls.Imaging.csproj  AngleBox.Designer.cs  AngleBox.cs  GlobalSuppressions.cs  ImageBox.Designer.cs  ImageBox.cs  ImageBox.resx  PointBox.Designer.cs  PointBox.cs
Sources/Accord.Controls.Statistics/: Accord.Controls (NETStandard).csproj  Accord.Controls.cd  Accord.Controls.csproj  ColorSequenceCollection.cs  DataSeriesView.Designer.cs  DataSeriesView.cs  DenavitHartenbergViewer.cs  Extensions.cs  GlobalSuppressions.cs  Tools.cs
Sources/Accord.Controls.Vision/: Accord.Controls.Vision (NETStandard).csproj  Accord.Controls.Vision.cd  Accord.Controls.Vision.csproj  Accord.NS.Controls.Vision.csproj  FaceController.cs  FaceEventArgs.cs  FaceMovements.cs  GlobalSuppressions.cs  HeadController.cs  HeadEventArgs.cs  HeadMovements.cs
Sources/Accord.Core/: Accord.Core (NETStandard).csproj  Accord.Core (VS Code).csproj  Accord.Core.cd  Accord.Core.csproj  Accord.config  Accord.dll.config  Cast.cs  DataSetExtensions.cs  Debug.cs  ExtensionMethods.cs  Extensions.cs  GlobalSuppressions.cs  Hyperrectangle.cs  InterlockedEx.cs  Serializer.cs  SerializerCompression.cs  Sparse.cs  Sparse`1.cs  Trace.cs  comments.xml
Tools/: REPL.bat  Read Me.txt  disable-strong-name-validation.cmd  enable-sdk-install.bat  enable-strong-name-validation.cmd  move-docs.ps1  open-csprojs-netstandard.bat  open-csprojs.bat  open-samples-csprojs.bat  open-test-csprojs.bat  update-output-soldir.bat  update-output.bat
Unit Tests/: Accord.Tests (NETStandard).targets  Accord.Tests.targets  All Tests.gallio  Build All Tests.sln  Read Me.txt
(+5939 files in other folders)
